# MomApp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
scripts/: build.ps1  build.sh  install.ps1  install.sh
src/: AddEmployeePopup.cpp  AddEmployeePopup.h  CMakeLists.txt  Employee.h  EmployeesTab.cpp  EmployeesTab.h  MainWindow.h  TabsWidget.h  main.cpp
